# burn_dino

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: deploy-pages.yml  test.yml
assets/models/: face_pca.mpk  pca.mpk  person_pca.mpk  upsampler.mpk
assets/tensors/: dino_0_small.st  dino_fg_pca.st  dino_pca.st
bevy/: Cargo.toml
bevy/src/: main.rs
bevy/www/: index.html
crates/bevy_burn_dino/: Cargo.toml
crates/bevy_burn_dino/src/: lib.rs  main.rs  platform.rs
crates/bevy_burn_dino/www/: index.html
example/: correctness.rs  forward.rs  pca.rs  tsne.rs
src/: correctness.rs  lib.rs
src/kernels/: mod.rs
src/kernels/adaptive_conv/: forward.rs  kernel.rs  mod.rs
src/layers/: attention.rs  block.rs  channel_norm.rs  jbu.rs  layer_norm.rs  layer_scale.rs  mlp.rs  mod.rs  patch_embed.rs  projection.rs  rope.rs
src/model/: dino.rs  dinov2.rs  mod.rs  pca.rs  upsample.rs
tests/: correctness.rs
tool/: benchmark.rs  import.rs  pca.py  standard.py  upsample.py
ui/: Cargo.toml
ui/src/: main.rs
