[package]
name = "burn_dino"
description = "burn dinov2 model inference and training"
version = "0.3.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
keywords = [
  "burn",
  "dino",
  "dinov2",
  "vit",
]
categories = [
  "computer-vision",
]
homepage = "https://github.com/mosure/burn_dino"
repository = "https://github.com/mosure/burn_dino"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]

[workspace]
members = [
  "crates/bevy_burn_dino",
]

resolver = "2"


[features]
default = ["import"]
import = ["bevy_args", "burn-import", "clap", "serde"]


[dependencies]
# bevy_args = { version = "1.6", optional = true }
bevy_args = { git = "https://github.com/mosure/bevy_args.git", branch = "burn", optional = true }
burn-import = { version = "0.15", features = ["pytorch"], optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1.0", optional = true }


[dependencies.burn]
version = "0.15"
features = [
  "autotune",
  "fusion",
  "wgpu",
]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]


[dev-dependencies]
bhtsne = "0.5.3"
criterion = { version = "0.5", features = ["html_reports"] }
futures-intrusive = { version = "0.5.0" }
image = { version = "0.25", default-features = false, features = ["png"] }
ndarray = "0.16"
pollster = { version = "0.4.0" }
safetensors = "0.4"


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.wasm-release]
strip = "symbols"
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"


[lib]
path = "src/lib.rs"

[[bin]]
name = "import"
path = "tool/import.rs"

[[example]]
name = "correctness"
path = "example/correctness.rs"

[[example]]
name = "pca"
path = "example/pca.rs"

[[example]]
name = "tsne"
path = "example/tsne.rs"

[[bench]]
name = "dinov2"
path = "tool/benchmark.rs"
harness = false
