[package]
name = "burn_dino_ui"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy_args = "1.5"
clap = { version = "4.5", features = ["derive"] }
futures-intrusive = "0.5"
serde = "1.0"


[dependencies.bevy]
version = "0.14"
default-features = false
features = [
  "bevy_asset",
  "bevy_render",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "png",
]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]


[[bin]]
name = "ui"
path = "src/main.rs"
