[package]
name = "bevy_burn_dino"
version = "0.1.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
keywords = [
  "bevy",
  "burn",
  "dino",
  "nokhwa",
]
categories = [
  "computer-vision",
]


[features]
default = ["native"]

native = ["nokhwa"]
web = []

editor = []
perftest = []



[dependencies]
# bevy_args = "1.6"
bevy_args = { git = "https://github.com/mosure/bevy_args.git", branch = "burn" }
burn_dino = { path = "../../", default-features = false }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
futures-intrusive = "0.5"
image = { version = "0.25.2", default-features = false, features = ["png"] }
nokhwa = { version = "0.10", features = ["input-native", "output-threaded"], optional = true }
once_cell = "1.19"
serde = "1.0"


# TODO: ideally, bevy and burn synchronize wgpu versions upstream
[dependencies.bevy]
# version = "0.14"
git = "https://github.com/mosure/bevy.git"
branch = "burn"
default-features = false
features = [
  "bevy_asset",
  "bevy_color",
  "bevy_render",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "png",
  # "webgpu",
  "x11",
]

[dependencies.burn]
version = "0.15"
features = [
  "autotune",
  "fusion",
  "wgpu",
]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]


[[bin]]
name = "bevy_burn_dino"
path = "src/main.rs"
