[package]
name = "bevy_burn_dino"
version = "0.2.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
keywords = [
  "bevy",
  "burn",
  "dino",
  "nokhwa",
]
categories = [
  "computer-vision",
]


[features]
default = ["native"]

fusion_backend = ["burn/fusion"]

native = ["burn/autotune", "futures", "nokhwa", "fusion_backend"]
web = []

editor = []
perftest = []



[dependencies]
# bevy_args = "1.6"
bevy_args = "2.0"
bevy_burn = { path = "../../sandbox/bevy_burn" }
burn_dino = { path = "../../", default-features = false }
clap = { version = "4.5", features = ["derive"] }
futures = { version = "0.3", optional = true }
futures-intrusive = "0.5"
image = { version = "0.25.2", default-features = false, features = ["png"] }
nokhwa = { version = "0.10", features = ["input-native", "output-threaded"], optional = true }
once_cell = "1.19"
serde = "1.0"


[dependencies.bevy]
version = "0.17"
default-features = false
features = [
  "bevy_asset",
  "bevy_camera",
  "bevy_core_pipeline",
  "bevy_image",
  "bevy_log",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "debug",
  "default_font",
  "png",
  "std",
  "tonemapping_luts",
  "webgpu",
  "x11",
  "zstd_rust",
]

[dependencies.burn]
version = "0.19"
default-features = false
features = [
  # "autotune",
  # "fusion",
  "std",
  # "template",
  "wgpu",
]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"


[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]


[lib]
path = "src/lib.rs"

[[bin]]
name = "bevy_burn_dino"
path = "src/main.rs"
